fixes alignment of form content on mid-size screens

--- a/client/styles/_contact.sass
+++ b/client/styles/_contact.sass
@@ -30,6 +30,8 @@
                 letter-spacing: 1px
                 color: $accent-3
                 font-weight: 500
+                @media all and (min-width: 700px)
+                    margin-left: 85px
         fieldset
             outline: none
             border: none
@@ -48,6 +50,8 @@
                 margin-bottom: $spacer-1
                 @media all and (min-width: 425px)
                     margin-bottom: 0
+                @media all and (min-width: 700px)
+                    width: 85px
             input, textarea
                 flex: 3
                 width: 100%
@@ -67,7 +71,7 @@
         button
             margin-left: 0
             @media all and (min-width: 700px)
-                margin-left: 65px
+                margin-left: 85px
             background-color: $accent-1
             border: 0
             padding: $spacer-2
